--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Произошла неизвестная ошибка — SNDTAG</title>
+        <title>Произошла неизвестная ошибка — Google</title>
         <script src="https://cdn.tailwindcss.com"></script>
 
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
@@ -41,7 +41,7 @@
 
           <h1 class="text-xl mt-12 font-medium text-[#999ca2] w-[18rem]">Не удается получить доступ к сайту</h1>
 
-          <span class="text-s text-[#999ca2] mt-6">Не удалось найти IP-адрес сервера <b>sndtag.ru</b>.</span>
+          <span class="text-s text-[#999ca2] mt-6">Не удалось найти IP-адрес сервера <b>google.com</b>.</span>
           <span class="text-s text-[#999ca2] mt-4">Попробуйте сделать следующее:</span>
           <span class="text-s text-[#999ca2]">Проверьте подключение к интернету.</span>
 
@@ -58,7 +58,7 @@
           <button class="bg-[#303134] p-[20px_36px] rounded-md mt-6 mb-52 active:scale-90 active:opacity-80 smooth text-xl" id="muteButton">🔇 Заглушить</button>
 
           <a href="https://www.myinstants.com/ru/instant/smekh-rebenka-85428/?utm_source=copy&utm_medium=share" class="bg-[#303134] p-[15px_36px] rounded-xl flex gap-3 text-[66px] active:scale-90 active:opacity-80 smooth font-semibold" id="watermark" target="_blank">
-               ХАХАХАХА
+               💃🏻🕺🏽🕺💃
           </a>
      </div>
 
