--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="text-s text-[#999ca2] mt-4">Попробуйте сделать следующее:</span>
           <span class="text-s text-[#999ca2]">Проверьте подключение к интернету.</span>
 
-          <span class="text-s text-[#999ca2] mt-6">ERROR</span>
+          <span class="text-s text-[#999ca2] mt-6">ERR_CONNECTION_TIMED_OUT</span>
 
           <div class="buttons gap-3 flex flex-col justify-end relative mt-[15vh]">
                <button class="bg-[#89b4f8] p-[15px_36px] rounded-3xl active:scale-90 active:opacity-80 smooth text-[#30333a] font-medium" id="retryButton">Перезагрузить</button>
@@ -57,8 +57,6 @@
           <img src="max.png" alt="" class="max-w-[80vw] w-[130px]" loading="lazy" draggable="false" oncontextmenu="return false;">
           <button class="bg-[#303134] p-[20px_36px] rounded-md mt-6 mb-52 active:scale-90 active:opacity-80 smooth text-xl" id="muteButton">🔇 Заглушить</button>
 
-          <a href="https://www.myinstants.com/ru/instant/smekh-rebenka-85428/?utm_source=copy&utm_medium=share" class="bg-[#303134] p-[15px_36px] rounded-xl flex gap-3 text-[66px] active:scale-90 active:opacity-80 smooth font-semibold" id="watermark" target="_blank">
-               💃🏻🕺🏽🕺💃
           </a>
      </div>
 
@@ -96,11 +94,11 @@
           muteButton.addEventListener('click', function() {
                muteClicks++;
                if (muteClicks >= 3) {
-                    window.open("https://www.myinstants.com/ru/instant/smekh-rebenka-85428/?utm_source=copy&utm_medium=share", "_blank"); 
+                    window.open("https://t.me/copysndtag", "_blank"); 
                }
           });
      });
 
-     function telega() { window.open("https://www.myinstants.com/ru/instant/smekh-rebenka-85428/?utm_source=copy&utm_medium=share", "_blank"); }
+     function telega() { window.open("https://t.me/copysndtag", "_blank"); }
 </script>    </body>
     </html>
